--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
+    "lint:ejs": "ejslint *.ejs",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -43,11 +44,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "ejs": "^3.1.10",
     "embla-carousel-react": "^8.3.0",
+    "express": "^5.1.0",
     "input-otp": "^1.2.4",
     "js": "^0.1.0",
     "lucide-react": "^0.462.0",
+    "mysql": "^2.18.1",
     "next-themes": "^0.3.0",
     "node": "^20.19.4",
     "react": "^18.3.1",
